# Patterns

./: .gitignore  CMakeLists.txt  README.md
Lec10_Builder/: CMakeLists.txt  builder.cpp
Lec10_Builder/include/: AsusComputerBuilder.hpp  Computer.hpp  ComputerBuilder.hpp
Lec10_Builder/src/: AsusComputerBuilder.cpp  Computer.cpp  ComputerBuilder.cpp
Lec1_Strategy/: CMakeLists.txt
Lec1_Strategy/template_impl/: CMakeLists.txt  strategy_templ.cpp
Lec1_Strategy/virtual_impl/: CMakeLists.txt  strategy.cpp
Lec2_Observer/: CMakeLists.txt  observer.cpp
Lec2_Observer/Lesson/: 02_Observer.docx  02_Observer.pptx
Lec2_Observer/include/: AudioPlayer.hpp  AudioPlugin.hpp  IObserver.hpp  ISubject.hpp  Network.hpp
Lec2_Observer/src/: AudioPlayer.cpp  AudioPlugin.cpp  Network.cpp
Lec3_Decorator/: CMakeLists.txt  decorator.cpp
Lec3_Decorator/include/: ILogger.hpp  SimplestLogger.hpp  TimeDecorator.hpp
Lec3_Decorator/src/: SimplestLogger.cpp  TimeDecorator.cpp
Lec4_Factory/: CMakeLists.txt  factory.cpp
Lec4_Factory/include/: Button.hpp  CheckBox.hpp  GUIFactory.hpp  MacButton.hpp  MacCheckBox.hpp  MacGUIFactory.hpp  MacWindow.hpp  WinButton.hpp  WinCheckBox.hpp  WinGUIFactory.hpp  WinWindow.hpp  Window.hpp
Lec4_Factory/src/: MacButton.cpp  MacCheckBox.cpp  MacGUIFactory.cpp  MacWindow.cpp  WinButton.cpp  WinCheckBox.cpp  (+2 more)
Lec5_Command/: CMakeLists.txt  command.cpp
Lec6_Adapter/: CMakeLists.txt  adapter.cpp
Lec7_Facade/: CMakeLists.txt  facade.cpp
Lec8_TemplateMethod/: CMakeLists.txt  template_method.cpp
Lec9_State/: CMakeLists.txt  state.cpp
(+55 files in other folders)
