cmake_minimum_required(VERSION 2.8)

add_subdirectory(Lec1_Strategy)
add_subdirectory(Lec2_Observer)
add_subdirectory(Lec3_Decorator)
add_subdirectory(Lec4_Factory)
add_subdirectory(Lec5_Command)
add_subdirectory(Lec6_Adapter)
add_subdirectory(Lec7_Facade)
add_subdirectory(Lec8_TemplateMethod)
add_subdirectory(Lec9_State)
add_subdirectory(Lec10_Builder)